# competitive-programming

./: .gitignore  CMakeLists.txt  README.md
prewritten-code/: CMakeLists.txt
prewritten-code/algorithms/: DSU.hpp  SuffixAutomaton.hpp  fft.hpp
prewritten-code/store/: num_mod.cpp
prewritten-code/templates/: all_includes.hpp  common_header.hpp  debug.hpp  functions.hpp  macros.hpp  main.cpp  types.hpp
prewritten-code/tests/: CMakeLists.txt  DSU_test.hpp  SuffixAutomaton_test.hpp  all_test.cpp  fft_test.hpp
scripts/: common.py  generate_tasks.py  inline_local_code.py
